--- a/src/components/css/list.css
+++ b/src/components/css/list.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10px; /* Здесь вы можете настроить расстояние между товарами */
+    margin: 10px; 
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
